--- a/TestGradeBookAppCTC/TestGradeBookAppCTC.csproj
+++ b/TestGradeBookAppCTC/TestGradeBookAppCTC.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{717EEB89-CD81-4396-92E0-B3E1B663A5D0}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>TestGradeBookAppCTC</RootNamespace>
     <AssemblyName>TestGradeBookAppCTC</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
